made site more responsive

--- a/index.html
+++ b/index.html
@@ -82,13 +82,13 @@
     </div>
     <div class="container">
       <div class="row">
-        <div class="col-6">
+        <div class="col-sm-6">
           <img
             src="images/yoga.jpg"
             class="img-fluid rounded"
             alt="Woman doing yoga" />
         </div>
-        <div class="col-6">
+        <div class="col-sm-6">
           <h2 class="mb-3">Yoga app</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
@@ -107,7 +107,7 @@
         </div>
       </div>
       <div class="row mt-5">
-        <div class="col-6">
+        <div class="col-sm-6">
           <h2 class="mb-3">Weather app</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
@@ -124,7 +124,7 @@
             >
           </div>
         </div>
-        <div class="col-6">
+        <div class="col-sm-6">
           <img
             src="images/weather.jpg"
             class="img-fluid rounded"
@@ -132,13 +132,13 @@
         </div>
       </div>
       <div class="row mt-5">
-        <div class="col-6">
+        <div class="col-sm-6">
           <img
             src="images/yogurt.jpg"
             class="img-fluid rounded"
             alt="Greek Yogurt with Blueberries" />
         </div>
-        <div class="col-6">
+        <div class="col-sm-6">
           <h2 class="mb-3">Yogurt app</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
