--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
           <ul class="navbar-nav">
             <li class="nav-item">
               <a
-                class="nav-link active"
+                class="nav-link"
                 aria-current="page"
                 href="index.html"
                 title="Homepage"
@@ -49,7 +49,10 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html" title="About Denise Garcia"
+              <a
+                class="nav-link active"
+                href="about.html"
+                title="About Denise Garcia"
                 >About me</a
               >
             </li>
@@ -80,19 +83,19 @@
         <div class="col-sm-4">
           <img
             src="images/yoga.jpg"
-            class="img-fluid p-2 shadow rounded"
+            class="img-fluid p-2 shadow rounded mb-4"
             alt="Woman doing Yoga" />
         </div>
         <div class="col-sm-4">
           <img
             src="images/weather.jpg"
-            class="img-fluid p-2 shadow rounded"
+            class="img-fluid p-2 shadow rounded mb-4"
             alt="Weather app" />
         </div>
         <div class="col-sm-4">
           <img
             src="images/yogurt.jpg"
-            class="img-fluid p-2 shadow rounded"
+            class="img-fluid p-2 shadow rounded mb-4"
             alt="Greek Yogurt with Blueberries" />
         </div>
       </div>
