--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     </div>
     <div class="container">
       <div class="row">
-        <div class="col-sm-6">
+        <div class="col-sm-6 d-none d-sm-block">
           <img
             src="images/yoga.jpg"
             class="img-fluid rounded"
@@ -124,7 +124,7 @@
             >
           </div>
         </div>
-        <div class="col-sm-6">
+        <div class="col-sm-6 d-none d-sm-block">
           <img
             src="images/weather.jpg"
             class="img-fluid rounded"
@@ -132,7 +132,7 @@
         </div>
       </div>
       <div class="row mt-5">
-        <div class="col-sm-6">
+        <div class="col-sm-6 d-none d-sm-block">
           <img
             src="images/yogurt.jpg"
             class="img-fluid rounded"
