--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
           <div class="mt-5">
             <a
               href="index.html#contact-me"
-              class="primary-link"
+              class="primary-link launch"
               title="Yoga Project"
               >Launch Yoga App</a
             >
@@ -118,7 +118,7 @@
           <div class="mt-5">
             <a
               href="index.html#contact-me"
-              class="primary-link"
+              class="primary-link launch"
               title="Weather Project"
               >Launch Weather App</a
             >
@@ -149,7 +149,7 @@
           <div class="mt-5">
             <a
               href="index.html#contact-me"
-              class="primary-link"
+              class="primary-link launch"
               title="Yogurt Project"
               >Launch Yogurt App</a
             >
